--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+2.3.2 (2018-10-18)
+------------------
+
+Bugs:
+
+* Compatibility with Python 3.7 see https://github.com/PyCQA/pycodestyle/issues/728
+
+
 2.3.1 (2017-01-31)
 ------------------
 
